Fixed State Alignment

--- a/wwwroot/css/stats.css
+++ b/wwwroot/css/stats.css
@@ -84,7 +84,11 @@ body, html {
 	margin-top: 25px;
 	height: 100%;
 	height: 730px;
-	background-color: aliceblue;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
 }
 
 .charts-container {
@@ -115,7 +119,9 @@ body, html {
 	margin-top: 10px;
 	height: 700px;
 	height: 100%;
-	position: relative;
+	display: flex;
+    justify-content: center; /* Centers it horizontally */
+	align-items: center;
 }
 
 #tooltip {
